fix toolbar spacing

--- a/client/src/components/Toolbar/style.css
+++ b/client/src/components/Toolbar/style.css
@@ -3,12 +3,11 @@
   height: 64px;
   display: flex;
   align-items: center;
-  padding-left: 16px;
   font-size: 18px;
   box-shadow: 0 2px 5px rgba(0,0,0,.26);  
 }
 
 .logo {
   height: 18px;
-  padding: 8px;
+  padding: 16px;
 }
